notebook/_build/latex/reports/Reinforcement_learning.log
Traceback (most recent call last):
  File "c:\users\ignac\appdata\local\programs\python\python39\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "c:\users\ignac\appdata\local\programs\python\python39\lib\site-packages\nbclient\client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "c:\users\ignac\appdata\local\programs\python\python39\lib\site-packages\nbclient\util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "c:\users\ignac\appdata\local\programs\python\python39\lib\site-packages\nbclient\util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "c:\users\ignac\appdata\local\programs\python\python39\lib\asyncio\base_events.py", line 642, in run_until_complete
    return future.result()
  File "c:\users\ignac\appdata\local\programs\python\python39\lib\site-packages\nbclient\client.py", line 553, in async_execute
    await self.async_execute_cell(
  File "c:\users\ignac\appdata\local\programs\python\python39\lib\site-packages\nbclient\client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "c:\users\ignac\appdata\local\programs\python\python39\lib\site-packages\nbclient\client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------

```{figure} C:/Users/ignac/Documents/GitHub/thesis/notebook/images/model_based_reinforcement_learning.png
---
height: 350px
width: 500px
name: MB_RL-fig
---
model_based reinforcement learning  
```
------------------

[1;36m  File [1;32m"<ipython-input-1-4133c88b0d52>"[1;36m, line [1;32m1[0m
[1;33m    ```{figure} C:/Users/ignac/Documents/GitHub/thesis/notebook/images/model_based_reinforcement_learning.png[0m
[1;37m    ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-4133c88b0d52>, line 1)

